--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h2>User Input Form</h2>
-        <form action="pdf.php" method="POST">
+        <form action="https://github.com/VaibhavKamtekar/generatePDf/blob/master/pdf.php" method="POST">
             <div class="form-group">
             <input type="hidden" name="id" id="id">
             </div>
